Fix style on mobile

--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -1,5 +1,5 @@
 .Timeline--stage {
-  @apply grid gap-x-1 gap-y-0 w-full h-full mt-3 px-3 overflow-hidden;
+  @apply grid gap-x-1 gap-y-0 w-full h-fit mt-3 px-3 pb-1 overflow-hidden;
 }
 
 .Timeline--stage:first-of-type {
